[package]
name = "dtan-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr-sdk = { version = "0.43.0", features = ["ndb"] }
nostr-relay-builder = { version = "0.43.0" }
log = "0.4.22"
config = { version = "0.15.4", features = ["yaml"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "fs", "signal"] }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
serde = { version = "1.0.216", features = ["derive"] }
nostrdb = { git = "https://github.com/damus-io/nostrdb-rs", rev = "2b2e5e43c019b80b98f1db6a03a1b88ca699bfa3" }

hyper = { version = "1.7.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.16", features = ["tokio", "http2"] }
sha1 = "0.10.6"
base64 = "0.22.1"
infer = "0.16.0"
mainline = "5.4.0"
portmapper = { git = "https://github.com/n0-computer/net-tools.git", rev = "d6eee7d7b8830b1b6a0132b386ba15d6a4eb8dc2" }
http-body-util = "0.1.3"
